--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/** @format */
+
+/** @format */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,71 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d1f2eb;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Mouse Memoirs', sans-serif;
+  max-height: 94vh;
+}
+
+.App {
+  width: 80vw;
+  max-height: 95vh;
+  margin: 0 auto;
+  margin-top: 1rem;
+  background-color: rgb(125, 120, 120);
+  border-radius: 20px;
+  box-shadow: 0 3px 8px #b5d2ca;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  border: 6px solid rgb(91, 91, 91);
+}
+
+.login {
+  width: 80vw;
+  height: 95vh;
+  margin: 0 auto;
+  margin-top: 1rem;
+  background-color: rgb(125, 120, 120);
+  border-radius: 20px;
+  box-shadow: 0 3px 8px #b5d2ca;
+  border: 6px solid rgb(91, 91, 91);
+}
+
+.lds-dual-ring {
+  display: inline-block;
+
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+.lds-dual-ring:after {
+  content: ' ';
+  display: block;
+  width: 84px;
+  height: 84px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
